2003-09-05  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/i386/fcntl.c (__fcntl_nocancel): Change
	prototype to use variable argument lists and get the possible one
	argument via va_arg.
	* sysdeps/unix/sysv/linux/fcntl.c (__fcntl_nocancel): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/fcntl.c: New.

2003-09-04  Ulrich Drepper  <drepper@redhat.com>

	* posix/unistd.h: Add back __THROW to sysconf, pathconf, fpathconf.

	* sysdeps/unix/sysv/linux/pathconf.c (__statfs_filesize_max):
	Report correct value for vxfs.
	* sysdeps/unix/sysv/linux/linux_fsinfo.h: Dfeine VXFS_SUPER_MAGIC.

	* gmon/gmon.c: Use only not-cancelable syscalls to write profiling
	data.

	* sysdeps/generic/utmp_file.c: Use not-cancelable syscalls all
	over the place.  It would be allowed to have these functions as
	cancellation points but the cleanup would be ugly and a lot of
	work.

	* sysdeps/generic/not-cancel.h (fcntl_not_cancel): Define.
	* sysdeps/unix/sysv/linux/not-cancel.h (fcntl_not_cancel): Define.

	* include/fcntl.h (__fcntl_nocancel): Declare.
	* sysdeps/unix/sysv/linux/fcntl.c: New file.
	* sysdeps/unix/sysv/linux/i386/fcntl.c (__libc_fcntl): Only enable
	cancellation if absolutely needed.
	(__fcntl_nocancel): Define.

	* posix/unistd.h (gethostid): Remove __THROW.  Clarify comment.
	* sysdeps/unix/sysv/linux/Makefile (CFLAGS-gethostid.c): Add
	-fexceptions.
	* sysdeps/unix/sysv/linux/gethostid.c (gethostid): Use
	extend_alloca.

	* resolv/res_init.c (__res_nclose): Use close_not_cancel_no_status
	instead of __close.

	* nss/getXXbyYY.c (FUNCTION_NAME): Add a few casts.  Remove
	unnecessary errno handling.

	* nss/getXXbyYY_r.c (INTERNAL): Use better variable name.
	Initialize it in all cases.  Change it to be a bit more like the
	code we had before.

2003-09-04  Jakub Jelinek  <jakub@redhat.com>

	* libio/fileops.c (_IO_file_read, _IO_new_file_write): Add
	__builtin_expect.
	(_IO_file_open): Likewise.  Use close_not_cancel.

2003-09-04  Ulrich Drepper  <drepper@redhat.com>